--- a/razzeCanine/src/app/info/info.component.html
+++ b/razzeCanine/src/app/info/info.component.html
@@ -18,43 +18,43 @@
                         <div>
                             <div class="row mb-3">
                                 <div class="col">
-                                    <h5>Barking:</h5>
+                                    <h5>Barking: {{bark}}</h5>
                                     <h4 class="zoom">{{dog.barking}}</h4>
                                 </div>
                                 <div class="col">
-                                    <h5>Coat length:</h5>
+                                    <h5>Coat length: {{coat}}</h5>
                                     <h4 class="zoom">{{dog.coat_length}}</h4>
                                 </div>
                                 <div class="col">
-                                    <h5>Drooling:</h5>
+                                    <h5>Drooling: {{drool}}</h5>
                                     <h4 class="zoom">{{dog.drooling}}</h4>
                                 </div>
                             </div>
                             <div class="row mb-3">
                                 <div class="col">
-                                    <h5>Energy:</h5>
+                                    <h5>Energy: {{ener}}</h5>
                                     <h4 class="zoom">{{dog.energy}}</h4>
                                 </div>
                                 <div class="col">
-                                    <h5>Grooming:</h5>
+                                    <h5>Grooming: {{groom}}</h5>
                                     <h4 class="zoom">{{dog.grooming}}</h4>
                                 </div>
                                 <div class="col">
-                                    <h5>Playfulness:</h5>
+                                    <h5>Playfulness: {{play}}</h5>
                                     <h4 class="zoom">{{dog.playfulness}}</h4>
                                 </div>
                             </div>
                             <div class="row mb-3">
                                 <div class="col">
-                                    <h5>Protectiveness:</h5>
+                                    <h5>Protectiveness: {{protect}}</h5>
                                     <h4 class="zoom">{{dog.protectiveness}}</h4>
                                 </div>
                                 <div class="col">
-                                    <h5>Shedding:</h5>
+                                    <h5>Shedding: {{shed}}</h5>
                                     <h4 class="zoom">{{dog.shedding}}</h4>
                                 </div>
                                 <div class="col">
-                                    <h5>Trainability:</h5>
+                                    <h5>Trainability: {{train}}</h5>
                                     <h4 class="zoom">{{dog.trainability}}</h4>
                                 </div>
                             </div>
@@ -75,21 +75,21 @@
                     <div class="d-flex mb-2"> <!--Goodness-->
                         <div class="container text-center border border-success bg-success bg-opacity-75 rounded">
                             <div class="row">
-                                <div class="col m-2">
+                                <div class="col my-2">
                                     <h1>Goodness</h1>
                                 </div>
                             </div>
                             <div class="row justify-content-between mb-2">
                                 <div class="col-3">
-                                    <h5>Good with children:</h5>
+                                    <h5>Good with children: {{gwC}}</h5>
                                     <h4 class="zoom">{{dog.good_with_children}}</h4>
                                 </div>
                                 <div class="col-4">
-                                    <h5>Good with other dogs:</h5>
+                                    <h5>Good with other dogs: {{gwD}}</h5>
                                     <h4 class="zoom">{{dog.good_with_other_dogs}}</h4>
                                 </div>
                                 <div class="col-3">
-                                    <h5>Good with strangers:</h5>
+                                    <h5>Good with strangers: {{gwS}}</h5>
                                     <h4 class="zoom">{{dog.good_with_strangers}}</h4>
                                 </div>
                             </div>
