--- a/razzeCanine/src/app/login/login.component.html
+++ b/razzeCanine/src/app/login/login.component.html
@@ -21,8 +21,7 @@
                 <div class="col-12 col-md-8 col-lg-6 col-xl-5" style="border-radius: 1rem;">
                     <div class="card-body p-5 text-center pb-3">
                         <div class="form-outline mb-4">
-                            <label for="user" class="form-label text-center fs-2 text pb-3 text-success">Nome
-                                utente</label>
+                            <label for="user" class="form-label text-center fs-2 text pb-3 text-success">Username</label>
                             <input type="email" id="user"
                                 class="border border-3 border-success bg-opacity-25 bg-success form-control form-control-lg"
                                 placeholder="Username" [(ngModel)]="username" />
