--- a/razzeCanine/src/app/dati/dati.component.css
+++ b/razzeCanine/src/app/dati/dati.component.css
@@ -2,16 +2,26 @@
     height: 5%;
 }
 
+.in {
+    background: transparent;
+    color: black;
+    cursor: pointer;
+}
+
 input[type="range"] {
     -webkit-appearance: none;
-    background-color: #ffc107;
+    background-color: #198754;
     height: 10px;
 }
+
 
 input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none;
     border-radius: 100%;
-    background-color: #198754;
-    height: 15px;
-    width: 10px;
+    /*background-color: #ffc107;*/
+    background-image: url('https://images.emojiterra.com/google/android-12l/512px/2b50.png');
+    background-size: cover;
+    background-position: center;
+    height: 25px;
+    width: 20px;
 }
