--- a/razzeCanine/src/app/dati/dati.component.css
+++ b/razzeCanine/src/app/dati/dati.component.css
@@ -14,6 +14,9 @@ input[type="range"] {
     height: 10px;
 }
 
+label, h5{
+    color: #ffc107;
+}
 
 input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none;
